Fix text size touching sides on mobile view

--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -13,6 +13,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
 
 	h2 {
 		font-size: 4rem;
@@ -23,5 +24,10 @@
 	p {
 		font-size: 1.8rem;
 		color: $white;
+		width: 32rem;
+
+		@include tablet {
+			width: auto;
+		}
 	}
 }
